# draw-rich-local

./: README.md  pyproject.toml
src/draw_rich_local/: __init__.py  cli.py  llm.py  pipeline.py  prompting.py  renderer.py  style.py
tests/: test_prompting.py  test_style.py
