[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draw-rich-local"
version = "0.1.0"
description = "Local AI-assisted D2 diagram generator with enhanced styling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
draw-rich-local = "draw_rich_local.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
